# learn-python

./: .flake8  01-introduction-to-programming.md  02-introduction-to-python.md  03-getting-started-with-python.md  05-hello-world.md  06-syntax.md  07-keywords-and-identifiers.md  08-comments.md  09-variables-and-constants.md  10-data-types.md  11-strings.md  12-numbers.md  13-booleans.md  14-lists.md  15-tuples.md  16-dictionaries.md  17-sets.md  18-arrays.md  19-literals.md  20-operators.md  21-type-casting.md  22-input-output-io.md  23-if-statements.md  24-for-loops.md  25-while-loops.md  26-functions.md  27-lambda-functions.md  28-exception-handling.md  29-namespace-and-scope.md  30-classes-and-objects.md  31-inheritance.md  32-ploymorphism.md  33-modules.md  99-getting-started-with-jupyter-notebooks.md  README.md  noxfile.py  pyproject.toml
01-introduction/: 01-introduction-to-programming.ipynb  02-introduction-to-python.ipynb  03-getting-started-with-python.ipynb  04-getting-started-with-jupyter-notebooks.ipynb  05-hello-world.ipynb  06-syntax.ipynb  07-keywords-and-identifiers.ipynb  08-comments.ipynb  09-variables-and-constants.ipynb  10-data-types.ipynb  11-strings.ipynb  12-numbers.ipynb  13-booleans.ipynb  14-lists.ipynb  15-tuples.ipynb  16-dictionaries.ipynb  17-sets.ipynb  18-arrays.ipynb  19-literals.ipynb  20-operators.ipynb  21-type-casting.ipynb  22-input-output-io.ipynb  23-if-statements.ipynb  24-for-loops.ipynb  25-while-loops.ipynb  26-functions.ipynb  27-lambda-functions.ipynb  28-exception-handling.ipynb  29-namespace-and-scope.ipynb  (+4 more)
(+22 files in other folders)
