[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = ""
authors = ["xransum <xransum@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
